--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.lllebin</groupId>
-	<artifactId>easyeat</artifactId>
+	<artifactId>easyeat-food-delivery</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>easyeat</name>
-	<description>easyeat</description>
+	<name>easyeat-food-delivery</name>
+	<description>easyeat-food-delivery</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -26,7 +26,16 @@
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>3.0.2</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.76</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.5</version>
+		</dependency>
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
@@ -48,6 +57,12 @@
 			<version>3.0.2</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper-spring-boot-starter</artifactId>
+			<version>1.4.7</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -63,6 +78,33 @@
 						</exclude>
 					</excludes>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.mybatis.generator</groupId>
+				<artifactId>mybatis-generator-maven-plugin</artifactId>
+				<version>1.4.1</version>
+				<configuration>
+					<!-- 逆向配置文件的位置 -->
+					<configurationFile>src/main/resources/generator/generator-config.xml</configurationFile>
+					<!--允许覆盖生成的文件-->
+					<overwrite>true</overwrite>
+					<!--允许移动生成的文件-->
+					<verbose>true</verbose>
+				</configuration>
+				<dependencies>
+					<!-- mybatis generator 核心依赖 -->
+					<dependency>
+						<groupId>org.mybatis.generator</groupId>
+						<artifactId>mybatis-generator-core</artifactId>
+						<version>1.4.1</version>
+					</dependency>
+					<!-- mysql 驱动 -->
+					<dependency>
+						<groupId>mysql</groupId>
+						<artifactId>mysql-connector-java</artifactId>
+						<version>8.0.29</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
